style/style.css
/* ! GENERAL */
::-webkit-scrollbar {
  display: none;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

ul {
  padding-left: 0;
  margin: 0;
  list-style: none;
}
span,
a {
  display: inline-block;
}
a {
  text-decoration: none;
  color: inherit;
}

body {
  background-color: #fbf9fa;
  margin: 0;
  font-family: "IBM Plex Sans Arabic", sans-serif;
}
img {
  display: block;
  max-width: 100%;
}
.flex-1 {
  flex: 1;
}
.min-w-0 {
  min-width: 0;
}
::selection {
  background-color: #3b82f6;
  color: #fff;
}

#outer {
  background-color: lightsteelblue;
  display: grid;
  grid-template-columns: 255px 1fr;
  grid-template-areas: "sidebar main";
  position: relative;
}

/* * SIDEBAR SECTION */

.sidebar {
  background-color: #fffffff2;
  grid-area: sidebar;
  position: fixed;
  width: 255px;
  height: 100vh;
  top: 0;
  right: 0;
  left: auto;
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: #9ca3af4d transparent;
  border-left: 1px solid #e5e7eb;
  display: flex;
  flex-direction: column;
  z-index: 10;
}

.sidebar::-webkit-scrollbar {
  width: 4px;
}

.sidebar::-webkit-scrollbar-thumb {
  background-color: #9ca3af4d;
  border-radius: 2px;
}
.sidebar::-webkit-scrollbar-track {
  background: 0 0;
}

.container-sidebar {
  padding: 24px;
}

.logo {
  margin-bottom: 32px;
}

.flex__logo,
.header--flex .logoo {
  display: flex;
  align-items: center;
  gap: 16px;
}

.flex__logo .icon-holder__logo,
.grid1 .logoo .header__logo {
  width: 56px;
  height: 56px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: linear-gradient(to bottom right, #2563eb, #4338ca);
  border-radius: 16px;
  box-shadow:
    0 10px 15px -3px rgba(59, 130, 246, 0.2),
    0 4px 6px -4px rgba(59, 130, 246, 0.2);
}

.icon {
  font-size: 20px;
  color: #fff;
  line-height: 1;
}

.flex__logo .content__logo {
  display: flex;
  flex-direction: column;
  line-height: 24px;
}

.content__logo .logo--text,
.header__content .header--text {
  color: #101828;
  font-size: 36px;
  font-weight: 700;
  line-height: 40px;
  margin: 0;
}
.content__logo .logo--title,
.header__content .header--title {
  color: #4a5565;
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  margin: 4px 0 0;
}

.content-sidebar > ul {
  padding: 0;
}
.container-sidebar ul li {
  margin-bottom: 8px;
}

.content-sidebar .home-badge {
  display: flex;
  align-items: center;
  padding: 12px 16px;
  color: #1447e6;
  background-color: #eff6ff;
  border: 1px solid #dbeafe;
  border-radius: 12px;
  column-gap: 12px;
  cursor: pointer;
}

.home-content,
.trans-content,
.balance-content,
.save-content,
.months-content {
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}
.content-sidebar .trans-badge,
.content-sidebar .balance-badge,
.content-sidebar .save-badge,
.content-sidebar .months-badge {
  display: flex;
  align-items: center;
  padding: 12px 16px;
  color: #4a5565;
  column-gap: 12px;
  cursor: pointer;
  padding: 12px 16px;
  border-radius: 12px;
  transition: all 0.3s ease;
}

.content-sidebar .trans-badge:hover,
.content-sidebar .balance-badge:hover,
.content-sidebar .save-badge:hover,
.content-sidebar .months-badge:hover {
  background-color: #f3f4f6;
  color: #1f2937;
}

.sidebar__actions {
  margin-top: 32px;
}
.sidebar__actions .sidebar__actions--text {
  color: #364153;
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  padding: 0 8px;
  margin: 0 0 16px;
}
.sidebar__actions .btn {
  font-family: "IBM Plex Sans Arabic", sans-serif;
  display: flex;
  align-items: center;
  cursor: pointer;
  text-align: left;
  background: 0 0;
  border: none;
  border-radius: 12px;
  gap: 12px;
  padding: 12px;
  margin-bottom: 12px;
  width: 100%;
  transition: all 0.2s;
}

.sidebar__actions .btn:hover {
  background-color: #00000005;
  transform: translate(2px);
}

.send,
.pay,
.arr {
  color: #155dfc;
  font-size: 16px;
}

.add {
  font-size: 13px;
  color: #00a63e;
}
.pay {
  color: #9810fa;
}

.arr {
  color: #f54a00;
}

.btn .badge {
  border-radius: 8px;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  background-color: color-mix(
    in oklab,
    oklch(62.3% 0.214 259.815) 10%,
    transparent
  );
}

.btn:nth-of-type(2) .badge {
  background-color: color-mix(
    in oklab,
    oklch(72.3% 0.219 149.579) 10%,
    transparent
  );
}
.addd {
  background-color: color-mix(
    in oklab,
    oklch(72.3% 0.219 149.579) 10%,
    transparent
  );
}
.btn:nth-of-type(3) .badge {
  background-color: color-mix(
    in oklab,
    oklch(62.7% 0.265 303.9) 10%,
    transparent
  );
}
.payyy {
  background-color: color-mix(
    in oklab,
    oklch(62.7% 0.265 303.9) 10%,
    transparent
  );
}

.btn:nth-of-type(4) .badge {
  background-color: color-mix(
    in oklab,
    oklch(70.5% 0.213 47.604) 10%,
    transparent
  );
}

.arrr {
  background-color: color-mix(
    in oklab,
    oklch(70.5% 0.213 47.604) 10%,
    transparent
  );
}
.btn .text {
  color: #374151;
  font-size: 14px;
  font-weight: 500;
  line-height: 21px;
}
/* * MAIN SECTION */
.main {
  padding: 32px;
  grid-area: main;
  width: 100%;
  background-color: #fbf9fa;
  display: grid;
  grid-template-columns: repeat(9, 1fr);
  gap: 24px;
  grid-template-areas:
    "grid1 grid1 grid1 grid1 grid1 grid1 grid1 grid1 grid1"
    "grid2 grid2 grid2 grid3 grid3 grid3 grid4 grid4 grid4"
    "grid5 grid5 grid5 grid7 grid7 grid7 grid7 grid7 grid7"
    "grid6 grid6 grid6 grid7 grid7 grid7 grid7 grid7 grid7"
    "grid11 grid11 grid11 grid9 grid9 grid9 grid8 grid8 grid8"
    "grid11 grid11 grid11 grid9 grid9 grid9 grid8 grid8 grid8"
    "grid11 grid11 grid11 grid10 grid10 grid10 grid8 grid8 grid8"
    "grid11 grid11 grid11 grid10 grid10 grid10 grid8 grid8 grid8";
}
/* ... */

